classDiagram
    class User {
        +user_id: UUID
        +username: String
        +email: String
        +password_hash: String
        +organization: String
        +created_at: DateTime
        +last_login: DateTime
        +authenticate(email: String, password: String): bool
        +create_upload(latitude: float, longitude: float, images: List[bytes]): Upload
    }

    class Upload {
        +upload_id: UUID
        +user_id: UUID
        +latitude: float
        +longitude: float
        +planting_date: DateTime
        +upload_timestamp: DateTime
        +additional_notes: String
        +status: UploadStatus
        +add_image(image_data: bytes, image_type: String): Image
        +submit_for_analysis(): Analysis
        +get_status(): UploadStatus
    }

    class Image {
        +image_id: UUID
        +upload_id: UUID
        +image_url: String
        +image_type: String
        +upload_timestamp: DateTime
        +preprocess(): bytes
        +extract_metadata(): Dict
        +validate(): bool
    }

    class Analysis {
        +analysis_id: UUID
        +upload_id: UUID
        +species_common_name: String
        +species_scientific_name: String
        +species_confidence: float
        +estimated_age: float
        +age_confidence: float
        +analysis_timestamp: DateTime
        +model_version: String
        +identify_species(images: List[Image]): Dict
        +estimate_age(images: List[Image]): Dict
        +request_certification(): Certification
    }

    class Certification {
        +certification_id: UUID
        +analysis_id: UUID
        +environmental_score: float
        +species_score: float
        +geographic_suitability_score: float
        +proximity_score: float
        +certification_status: CertificationStatus
        +certification_timestamp: DateTime
        +expiration_date: DateTime
        +calculate_scores(analysis: Analysis): Dict
        +generate_recommendations(): List[Recommendation]
        +issue_certificate(): String
    }

    class Recommendation {
        +recommendation_id: UUID
        +certification_id: UUID
        +recommendation_type: String
        +description: String
        +priority: int
        +created_at: DateTime
        +generate_alternatives(species: String, location: Location): List[String]
        +format_for_display(): Dict
    }

    class GeoSuitabilityRule {
        +rule_id: UUID
        +species_scientific_name: String
        +min_latitude: float
        +max_latitude: float
        +min_longitude: float
        +max_longitude: float
        +min_elevation: float
        +max_elevation: float
        +soil_types: List[String]
        +climate_zones: List[String]
        +precipitation_requirements: Dict
        +temperature_requirements: Dict
        +created_at: DateTime
        +updated_at: DateTime
        +is_location_suitable(species: String, latitude: float, longitude: float): bool
        +get_suitable_species(latitude: float, longitude: float): List[String]
    }

    class TreeSpecies {
        +species_id: UUID
        +common_name: String
        +scientific_name: String
        +type: SpeciesType
        +oxygen_production: float
        +carbon_sequestration: float
        +fruit_bearing: bool
        +native_regions: List[String]
        +get_environmental_score(): float
        +is_suitable_for_location(latitude: float, longitude: float): bool
    }

    class GemmaModelService {
        +model_name: String
        +model_version: String
        +initialize_model(): bool
        +predict_species(images: List[bytes]): Dict
        +predict_age(images: List[bytes], species: String): Dict
        +health_check(): bool
    }

    class ProximityChecker {
        +check_nearby_trees(latitude: float, longitude: float, radius: float): List[Dict]
        +calculate_optimal_spacing(species: String): float
        +validate_planting_location(latitude: float, longitude: float, species: String): bool
    }

    class ScoringEngine {
        +calculate_species_score(species: String): float
        +calculate_suitability_score(species: String, latitude: float, longitude: float): float
        +calculate_proximity_score(latitude: float, longitude: float, species: String): float
        +calculate_overall_score(species_score: float, suitability_score: float, proximity_score: float): float
    }

    class APIService {
        +handle_upload(request_data: Dict): Response
        +process_analysis(upload_id: UUID): Response
        +generate_certification(analysis_id: UUID): Response
        +get_upload_status(upload_id: UUID): Response
        +get_analysis_results(analysis_id: UUID): Response
        +get_certification(certification_id: UUID): Response
    }

    class AuthService {
        +issue_token(user: User): String
        +verify_token(token: String): bool
        +refresh_token(token: String): String
        +validate_permissions(user_id: UUID, resource: String, action: String): bool
    }

    User "1" --> "*" Upload: creates
    Upload "1" --> "*" Image: contains
    Upload "1" --> "1" Analysis: processed into
    Analysis "1" --> "1" Certification: evaluated as
    Certification "1" --> "*" Recommendation: generates
    Analysis --> GemmaModelService: uses
    Certification --> ScoringEngine: uses
    ScoringEngine --> TreeSpecies: references
    ScoringEngine --> GeoSuitabilityRule: applies
    ScoringEngine --> ProximityChecker: utilizes
    APIService --> AuthService: secures with
    APIService --> User: authenticates
    APIService --> Upload: manages
    APIService --> Analysis: initiates
    APIService --> Certification: issues